[gd_scene load_steps=16 format=3 uid="uid://ce22jwvxoan48"]

[ext_resource type="PackedScene" uid="uid://bvhx82eau62u8" path="res://Components/health_system.tscn" id="1_pd1d8"]
[ext_resource type="Script" uid="uid://dbsu2wgaqddwy" path="res://Entities/allied_soldier.gd" id="1_qcgow"]
[ext_resource type="Texture2D" uid="uid://bckqv8uthcs8n" path="res://Assets/survivor1_reload.png" id="2_lqr21"]
[ext_resource type="Texture2D" uid="uid://bi4btcg8yjocb" path="res://Assets/survivor1_machine.png" id="3_qcgow"]
[ext_resource type="PackedScene" uid="uid://bivqglsx6xa3m" path="res://Components/line_of_sight.tscn" id="5_2q06j"]
[ext_resource type="PackedScene" uid="uid://gekeoi5mba2l" path="res://Components/observer.tscn" id="5_ilfrq"]
[ext_resource type="PackedScene" uid="uid://cvhxcb8j5nxg7" path="res://Components/targeter.tscn" id="5_smne3"]
[ext_resource type="PackedScene" uid="uid://bhwn8uo4g627j" path="res://States/state_machine.tscn" id="6_mx1sb"]
[ext_resource type="PackedScene" uid="uid://bogpaq70csxuw" path="res://States/npc_idle_stand.tscn" id="10_smne3"]
[ext_resource type="PackedScene" uid="uid://cqrjjkq5ghuux" path="res://States/npc_idle_turn.tscn" id="11_5qc07"]
[ext_resource type="PackedScene" uid="uid://d0thbvrt86t67" path="res://States/npc_idle_walk.tscn" id="12_o50em"]
[ext_resource type="PackedScene" uid="uid://se3ob4ys2bx5" path="res://States/npc_targeting.tscn" id="13_o50em"]

[sub_resource type="SpriteFrames" id="SpriteFrames_2q06j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_lqr21")
}, {
"duration": 1.0,
"texture": ExtResource("3_qcgow")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_o50em"]
radius = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_qcgow"]

[node name="AlliedSoldier" type="CharacterBody2D" groups=["Good Guys"]]
scale = Vector2(0.25, 0.25)
collision_mask = 7
motion_mode = 1
wall_min_slide_angle = 0.0174533
script = ExtResource("1_qcgow")
metadata/_edit_group_ = true

[node name="HealthSystem" parent="." instance=ExtResource("1_pd1d8")]
maxHealth = 100

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_2q06j")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_o50em")

[node name="ObservationArea" type="Area2D" parent="."]

[node name="ListeningBubble" type="CollisionShape2D" parent="ObservationArea"]
scale = Vector2(16, 16)
shape = SubResource("CircleShape2D_qcgow")

[node name="ViewCone" type="CollisionPolygon2D" parent="ObservationArea"]
polygon = PackedVector2Array(1200, 512, 1200, -512, 1024, -1024, 20, -148, 20, 148, 1024, 1024)

[node name="Targeter" parent="." node_paths=PackedStringArray("parent", "observer") instance=ExtResource("5_smne3")]
parent = NodePath("..")
observer = NodePath("../Observer")
trackedEntityGroups = Array[String](["Zombies"])

[node name="Observer" parent="." node_paths=PackedStringArray("lineOfSight", "observationArea") instance=ExtResource("5_ilfrq")]
lineOfSight = NodePath("../LineOfSight")
observationArea = NodePath("../ObservationArea")

[node name="LineOfSight" parent="." node_paths=PackedStringArray("parent") instance=ExtResource("5_2q06j")]
parent = NodePath("..")
blockingLayers = Array[int]([2])

[node name="StateMachine" parent="." node_paths=PackedStringArray("initial_state") instance=ExtResource("6_mx1sb")]
initial_state = NodePath("NpcIdleStand")

[node name="NpcIdleStand" parent="StateMachine" node_paths=PackedStringArray("targeter") instance=ExtResource("10_smne3")]
targeter = NodePath("../../Targeter")

[node name="NpcIdleTurn" parent="StateMachine" node_paths=PackedStringArray("targeter") instance=ExtResource("11_5qc07")]
targeter = NodePath("../../Targeter")

[node name="NpcIdleWalk" parent="StateMachine" node_paths=PackedStringArray("targeter", "parent", "navAgent") instance=ExtResource("12_o50em")]
targeter = NodePath("../../Targeter")
parent = NodePath("../..")
navAgent = NodePath("../../NavigationAgent2D")

[node name="NpcTargeting" parent="StateMachine" node_paths=PackedStringArray("targeter") instance=ExtResource("13_o50em")]
targeter = NodePath("../../Targeter")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_enabled = true

[connection signal="TargetingEntered" from="StateMachine/NpcTargeting" to="." method="_on_npc_targeting_targeting_entered"]
[connection signal="TargetingExited" from="StateMachine/NpcTargeting" to="." method="_on_npc_targeting_targeting_exited"]
[connection signal="navigation_finished" from="NavigationAgent2D" to="StateMachine/NpcIdleWalk" method="_on_navigation_agent_2d_navigation_finished"]
